--- a/module1/FormCoBan/Taoformdongian.html
+++ b/module1/FormCoBan/Taoformdongian.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Sở Thích Của Bạn</title>
     <style>
-        body
-        {
-            margin: 0 auto;
-        }
+
         #main{
             width: 1000px;
             padding: 0;
@@ -43,48 +40,55 @@
         }
         .chimuc
         {
-            text-align: center;
             font-size: 25px;
             color: black;
         }
         table
         {
            width: 100%;
-            border: 1px solid black;
-        }
-        tr{
-            border: 1px solid black;
-        }
-        td{
-            border: 1px solid black;
+
         }
         input{
-            display: block;
+
             border-top: 2px solid black;
             border-bottom-left :2px solid black;
             margin-top: 6px;
             margin-bottom: 10px;
-            outline-style: none;
         }
         input[type="text"] {
             padding: 5px;
             width: 70%;
+            display: block;
         }
         .sothich{
             font-size: 20px;
             color: orange;
-            margin-top:1px;
-            margin-left: 0px;
+
         }
 
-        input[type="checkbox"]  {
-            display : inline-table;
-            width:15px;
-            height:15px;
+
+        input[type="checkbox"] {
+            width: 15px;
+            height: 15px;
             text-align: left;
-            margin-left: 0px;
-        }
 
+        }
+        input[type="button"]
+        {
+            width: 170px;
+            height: 40px;
+            color: black;
+            border-radius: 5px;
+            padding: 10px 25px;
+            font-family: 'Lato', sans-serif;
+            font-size: 20px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            position: relative;
+            box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+            7px 7px 20px 0px rgba(0,0,0,.1),
+            4px 4px 5px 0px rgba(0,0,0,.1);
+        }
         </style>
 </head >
 <body id="main">
@@ -101,7 +105,7 @@
                     Họ và tên :
                 </td>
                 <td colspan="3">
-                    <label> <input name="name" value="Name" type="text" /> </label>
+                     <input name="name"  type="text" />
                 </td>
             </tr>
                 <tr colspan="3">
@@ -109,7 +113,7 @@
                     Email :
                 </td>
                 <td colspan="3">
-                    <label> <input name="name" value="Email" type="text" /> </label>
+                     <input name="name"  type="text" />
                 </td>
             </tr>
             <tr >
@@ -132,8 +136,10 @@
                     <input name="dienanh" value="movie" type="checkbox"/> Điện ảnh <br/>
                 </td>
 
-            </tr>
-
+            </tr >
+                <td style="text-align: center"; colspan="6">
+                    <input name="submit" value="Gửi thông tin" type="button"> <input name="reset" value="Nhập lại" type="button">
+                </td>
 
         </table>
     </form>
