--- a/module1/BienVaKieuDuLieu/BaiTap/Baitapbienkieudulieu/ungdungmaytinh.html
+++ b/module1/BienVaKieuDuLieu/BaiTap/Baitapbienkieudulieu/ungdungmaytinh.html
@@ -25,15 +25,15 @@
         </tr>
         <tr>
             <td>
-                <button id="cong" onclick="pcong()">Addition(+)</button>
-                <button id="tru" onclick="ptru()">Subtraction(-)</button>
-                <button id="nhan" onclick="pnhan()">Multiplication(X)</button>
-                <button id="chia" onclick="pchia()">Division(/)</button>
+                <input type="button" value="Additilion(+)" onclick="tinhtoan(this.value)">
+                <input type="button" value="Subtraction(-)" onclick="tinhtoan(this.value)" >
+                <input type="button" value="Multipcation(X)" onclick="tinhtoan(this.value)">
+                <input type="button" value="Division(/)" onclick="tinhtoan(this.value)" >
             </td>
         </tr>
         <tr>
             <td>
-               Result &nbsp;<p id="phep">----</p>&nbsp;<p id="result">-------</p>
+               Result &nbsp;<p id="result">-------</p>
             </td>
         </tr>
     </table>
