--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -5,8 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<script>
-    
+<p>Click the button to return the value of its value attribute.</p>
+<input id="nhap" type="text" >
+<input id="so3" type="button" value="3" onclick="daygiatri()">
+<input id="so5" type="button" value="5" onclick="daygiatri()">
+<script type="text/javascript">
+    var giatri=0;
+    function getVal(valu)
+    {
+        let a= parseInt(valu)+1;
+        alert(a);
+    }
+    function daygiatri() {
+        giatri=parseInt(document.getElementById("nhap").value + document.getElementById("so3").value);
+        document.getElementById("nhap").value=giatri;
+    }
 </script>
 </body>
 </html>
