--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -6,16 +6,14 @@
 </head>
 <body>
 <p>Click the button to return the value of its value attribute.</p>
-<input id="nhap" type="text" >
-<input id="so3" type="button" value="3" onclick="daygiatri()">
-<input id="so5" type="button" value="5" onclick="daygiatri()">
+
 <script type="text/javascript">
-    var giatri=0;
+    var a= "a"
+    var b= "b"
+    if(a<b){
+        alert(a)
 
-    function daygiatri() {
 
-        giatri=document.getElementById("so3").id;
-        document.getElementById("nhap").value=giatri;
     }
 </script>
 </body>
