--- a/module1/CauTrucDK2/BaiTap/BTgoodfastcheap.html
+++ b/module1/CauTrucDK2/BaiTap/BTgoodfastcheap.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>[*Bài tập] Ứng dụng good-fast-cheap</title>
+    <meta charset="UTF-8">
     <style>
-        .switch ,.switch2,.switch3{
+        .switch {
             position: relative;
             display: inline-block;
             width: 60px;
             height: 34px;
         }
 
-        .slider {
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider, .slider2, .slider3 {
             position: absolute;
             cursor: pointer;
             top: 0;
@@ -22,7 +28,9 @@
             -webkit-transition: .4s;
             transition: .4s;
         }
-        .slider:before {
+
+
+        .slider:before, .slider2:before, .slider3:before {
             position: absolute;
             content: "";
             height: 26px;
@@ -33,44 +41,138 @@
             -webkit-transition: .4s;
             transition: .4s;
         }
-        input:checked + .slider +.switch  {
-            background-color: #2196F3;
+
+        input:checked + .slider {
+            background-color: #0af30b;
         }
-        input:checked + .slider +.switch2  {
+
+        input:checked + .slider2 {
             background-color: #2196F3;
         }
 
+        input:checked + .slider3 {
+            background-color: #f31611;
+        }
+
         input:focus + .slider {
+            box-shadow: 0 0 1px #0af30b;
+        }
+
+        input:focus + .slider2 {
             box-shadow: 0 0 1px #2196F3;
         }
-        input:checked + .slider:before {
+
+        input:focus + .slider3 {
+            box-shadow: 0 0 1px #f31611;
+        }
+
+        input:checked + .slider:before, input:checked + .slider2:before, input:checked + .slider3:before {
             -webkit-transform: translateX(26px);
             -ms-transform: translateX(26px);
             transform: translateX(26px);
         }
 
         /* Rounded sliders */
-        .slider.round {
+        .slider.round, .slider2.round, .slider3.round {
             border-radius: 34px;
         }
 
-        .slider.round:before {
+        .slider.round:before, .slider2.round:before, .slider3.round:before {
             border-radius: 50%;
         }
+
+        td {
+            font-size: 30px;
+            font-family: 'Lato', sans-serif;
+            font-weight: bold;
+        }
+
+        .bang {
+            width: 200px;
+            height: 300px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 150px;
+        }
     </style>
+
 </head>
 <body>
-<label class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
-<label class="switch" >
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
-<label class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+<div class="bang">
+    <table>
+        <tr>
+            <td>
+                <label class="switch">
+                    <input type="checkbox" id="good" onclick="kiemtra(this.id)">
+                    <span class="slider round"></span>
+                </label>
+            </td>
+            <td>
+                GOOD
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label class="switch">
+                    <input type="checkbox" id="cheap" onclick="kiemtra(this.id)">
+                    <span class="slider2 round"></span>
+                </label>
+            </td>
+            <td>
+                CHEAP
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label class="switch">
+                    <input type="checkbox" id="fast" onclick="kiemtra(this.id)">
+                    <span class="slider3 round"></span>
+                </label>
+            </td>
+            <td>
+                FAST
+            </td>
+        </tr>
+
+    </table>
+</div>
+<script>
+
+    let good = document.getElementById("good");
+    let cheap = document.getElementById("cheap");
+    let fast = document.getElementById("fast");
+
+    function kiemtra(chon) {
+        switch (chon) {
+            case 'good': {
+                if (cheap.checked) {
+                    fast.checked = false;
+                } else {
+                    cheap.checked = false;
+                }
+
+
+                break;
+            }
+            case 'cheap': {
+                if (fast.checked) {
+                    good.checked = false;
+                } else {
+                    fast.checked = false;
+                }
+                break;
+            }
+            case 'fast': {
+                if (good.checked) {
+                    cheap.checked = false;
+                } else {
+                    good.checked = false;
+                }
+            }
+
+        }
+
+    }
+</script>
 </body>
 </html>
