--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -5,16 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-<p>Click the button to return the value of its value attribute.</p>
 
 <script type="text/javascript">
-    var a= "a"
-    var b= "b"
-    if(a<b){
-        alert(a)
+    let x = 3;
 
-
+    let i = 0;
+    while (i < 3) {
+        x += 1;
+        i += 1;
     }
+    alert(i)
+
+
+
 </script>
 </body>
 </html>
