--- a/module1/CauTrucLap/BaiTap/BThienthicacsonguyen.html
+++ b/module1/CauTrucLap/BaiTap/BThienthicacsonguyen.html
@@ -7,18 +7,21 @@
 <body>
 <script>
     let n = prompt("nhập số lượng số nguyên tố cần in");
-    let dem=0;
-    if (n < 2) {
-        alert("không phải là số nguyên tố")
-    } else {
-        for (let i = 2; i <= n; i++) {
-            if (n % i == 0) {
-                alert("không phải là số nguyen tố");
+    let demSoLan = 0;
+    let soCanKiemTra = 1;
+    while (demSoLan < n) {
+        let xacDinh = 0;
+        for (let i = 2; i <= Math.sqrt(soCanKiemTra); i++) {
+            if (soCanKiemTra % i == 0) {
+                xacDinh++;
             }
-      
         }
+        if (xacDinh == 0 && soCanKiemTra > 1) {
+            document.writeln(soCanKiemTra + '<br>');
+            demSoLan++;
+        }
+        soCanKiemTra++
     }
-
 </script>
 </body>
 </html>
