--- a/module1/CauTrucLap/ThucHanh/THSuDungVongLapLongNhau.html
+++ b/module1/CauTrucLap/ThucHanh/THSuDungVongLapLongNhau.html
@@ -9,17 +9,17 @@
 </body>
 <script>
     //bai1
-    // let sout;
-    // sout = "<table border='1' width='300' cellspacing='0' cellpadding='3'>";
-    // for (i = 1; i <= 20; i++) {
-    //     sout = sout + "<tr>";
-    //     for (j = 1; j <= 10; j++) {
-    //         sout = sout + "<td>" + i * j + "</td>";
-    //     }
-    //     sout = sout + "</tr>";
-    // }
-    // sout = sout + "</table>";
-    // document.write(sout);
+    let sout;
+    sout = "<table border='1' width='300' cellspacing='0' cellpadding='3'>";
+    for (i = 1; i <= 20; i++) {
+        sout = sout + "<tr>";
+        for (j = 1; j <= 10; j++) {
+            sout = sout + "<td>" + i * j + "</td>";
+        }
+        sout = sout + "</tr>";
+    }
+    sout = sout + "</table>";
+    document.write(sout);
     //bai2
 
     let bang, a, b;
