--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -7,15 +7,10 @@
 <body>
 
 <script type="text/javascript">
-    let x = 3;
 
-    let i = 0;
-    while (i < 3) {
-        x += 1;
-        i += 1;
-    }
-    alert(i)
 
+
+    console.log(c);
 
 
 </script>
