--- a/module1/LapTrinhCoban/New folder/sd.html
+++ b/module1/LapTrinhCoban/New folder/sd.html
@@ -5,12 +5,24 @@
     <title>Title</title>
 </head>
 <body>
+<div id="">
+    <p id="menu"></p>
+</div>
 
-<script type="text/javascript">
+<script>
+    let menu = ["cafe", "sữa"];
 
+        let a = document.getElementById("menu");
+        let data = "";
+        for (let i = 0; i<menu.length; i++) {
+            data += "<p onclick='abc(this.innerText)'>"+menu[i]+"</p>";
 
-let a="Tôi là 1 đứa ngốc"
-    alert(a.length)
+        }
+
+    a.innerHTML=data;
+  function abc(b) {
+        document.writeln(b);
+  }
 
 </script>
 </body>
