--- a/module1/Mang/BaiTap/BTLuyenTap1/bai7.html
+++ b/module1/Mang/BaiTap/BTLuyenTap1/bai7.html
@@ -9,7 +9,7 @@
     let arr=[];
     for (let i=0;i<10;i++) {
         let nhap = prompt("nhập vào số nguyên");
-        if (parseInt(nhap) - nhap != 0) {
+        if (parseInt(nhap) - nhap !== 0) {
             alert("bạn phải nhập số nguyên ");
             i--;
             continue
